name:                cryptopals
version:             0.1.0.0
synopsis:            Learning Haskell while doing the challenges from http://cryptopals.com/
description:         Please see README.md
homepage:            http://github.com/bendoerr/cryptopals#readme
license:             BSD3
license-file:        LICENSE
author:              Benjamin R. Doerr
maintainer:          craftsman@bendoerr.me
copyright:           2016 Benjamin R. Doerr
category:            Crypto
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src

  exposed-modules:     CryptoPals.Analysis.Frequency
                     , CryptoPals.Analysis.HammingDistance
                     , CryptoPals.Analysis.LetterFrequency
                     , CryptoPals.Analysis.Letters
                     , CryptoPals.Cipher.AES
                     , CryptoPals.Cipher.CaesarXOR
                     , CryptoPals.Cipher.OneTimePad
                     , CryptoPals.Cipher.Types
                     , CryptoPals.Cipher.VigenereXOR
                     , CryptoPals.Convert
                     , CryptoPals.Utils

  build-depends:       base >= 4.7 && < 5
                     , base16-bytestring
                     , base64-bytestring
                     , bytestring
                     , memory
                     , cryptonite
                     , containers
                     , tokenize
                     , word8
                     , text
  default-language:    Haskell2010

test-suite cryptopals-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             CryptoPalsSpec.hs
  build-depends:       base
                     , cryptopals
                     , bytestring
                     , hspec
                     , QuickCheck
                     , cipher-aes
                     , crypto-cipher-types
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://githhub.com/bendoerr/cryptopals
